--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <app>Loading ...</app>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,console.*,Intl.~locale.en&gated=1"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.3.0/core.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.0/shim.min.js"></script>
 </body>
 </html>
